# Lab_2

NavigationLabCode-1/: CMakeLists.txt
NavigationLabCode-1/Lab2_NavigationCode/: Navigation.cpp  Navigation.h  main.cpp
